# Echoz

./: .gitignore  .replit  API_docs.md  App.js  Pasted-ustom-css-HTTP-1-1-304-INFO-werkzeug-172-31-196-117-26-Oct-2024-20-32-49-GET-static-js-ma-1729974953883.txt  README.md  app.config.js  app.json  app.py  config.json  fetch.py  hi.sql  metro.config.js  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  routes.py  server.py  track.py  utils.py
Memoir/: app.json  package-lock.json  package.json
Memoir/app/: index.tsx
Memoir/components/: LocationTest.tsx  locationService.tsx
components/notes/: NoteCard.js  NoteForm.js
contexts/: InitializationContext.js
navigation/: AppNavigator.js  navigationRef.js
screens/AddNoteScreen/: index.js  styles.js
screens/MapScreen/: index.js  styles.js  temp.json
screens/ViewNoteScreen/: index.js  styles.js
static/css/: custom.css
static/js/: main.js
templates/: 404.html  500.html  base.html  index.html  view_memory.html
utils/: locationUtils.js
