[project]
name = "repl-nix-memorykeeper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "boto3>=1.35.49",
    "werkzeug>=3.0.6",
    "botocore>=1.35.49",
    "sqlalchemy>=2.0.36",
]
